--- a/Expressjs/views/index.ejs
+++ b/Expressjs/views/index.ejs
@@ -7,7 +7,7 @@
     <title>Malevolent Shrine</title>
   </head>
   <body> 
-     <div class="container">
+     <!-- <div class="container">
         <h2>Signup</h2>
         <form action="signup.php" method="POST">
             <div class="form-group">
@@ -39,7 +39,7 @@
                 <button type="submit">Signin</button>
             </div>
         </form>
-    </div>
+    </div> -->
     <form action="/todo" method="post">
       <input type="text" name="todo" />
       <input type="submit" value="add" />
