--- a/Expressjs/views/index.ejs
+++ b/Expressjs/views/index.ejs
@@ -1,54 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link rel="stylesheet" href="Style.css">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Malevolent Shrine</title>
+    <title>Document</title>
   </head>
-  <body> 
-     <!-- <div class="container">
-        <h2>Signup</h2>
-        <form action="signup.php" method="POST">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="form-group">
-                <button type="submit">Signup</button>
-            </div>
-        </form>
-    </div>
-
-    <div class="container">
-        <h2>Signin</h2>
-        <form action="signin.php" method="POST">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div class="form-group">
-                <button type="submit">Signin</button>
-            </div>
-        </form>
-    </div> -->
+  <body>
     <form action="/todo" method="post">
-      <input type="text" name="todo" />
+      <input type="text" name="title" />
       <input type="submit" value="add" />
     </form>
     <% todos.forEach((todo) => { %>
     <li>
       <%= todo.title %>
       <form action="/todo/delete/<%= todo._id %>" method="post">
-        <button type="submit">Delete</button>
+        <button type="submit">delete</button>
       </form>
       <form action="/todo/edit/<%= todo._id %>" method="get">
         <button type="submit">Update</button>
@@ -56,6 +22,4 @@
     </li>
     <% }) %>
   </body>
-</head>
-
 </html>
